<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#075985">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="343dp"
        android:layout_height="259dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/outfit_extrabold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Email"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_img" />

    <EditText
        android:id="@+id/Username_txt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/format_text_input"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/outfit_extrabold"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUsername" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/outfit_extrabold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Password"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Username_txt" />

    <EditText
        android:id="@+id/Password_txt"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/format_text_input"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/outfit_extrabold"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPassword" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="0dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/outfit_extrabold"
        android:padding="5dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@id/Password_txt"
        app:layout_constraintTop_toBottomOf="@id/Password_txt" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/outfit_extrabold"
        android:padding="5dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="@id/Password_txt"
        app:layout_constraintTop_toBottomOf="@id/Password_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>