<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_colour">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:width="300dp"
                android:height="100dp"
                android:autoSizeTextType="uniform"
                android:color="@color/white"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/budget_category"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnCategory"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:background="@drawable/format_spinner"
                android:color="@color/white"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:height="75dp"
                android:autoSizeTextType="uniform"
                android:color="@color/white"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:text="@string/budget_amount"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtAmountInput"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/format_button"
                android:color="@color/white"
                android:fontFamily="@font/outfit_extrabold"
                android:gravity="center"
                android:hint="@string/transaction_amount_hint"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:height="100dp"
                android:autoSizeTextType="uniform"
                android:color="@color/white"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:text="@string/transaction_date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/dpDate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:background="@drawable/format_button"
                android:calendarViewShown="false"
                android:color="@color/white"
                android:datePickerMode="spinner"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="0dp" />

            <TextView
                android:id="@+id/txtDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:height="100dp"
                android:autoSizeTextType="uniform"
                android:color="@color/white"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:text="@string/transaction_description"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/format_button"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:gravity="center"
                android:hint="@string/transaction_description_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="30sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_capture"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/format_button"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="20dp"
                android:text="@string/upload_photo"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-75dp"
                android:layout_marginTop="10dp"
                android:width="125dp"
                android:height="75dp"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/red"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-75dp"
                android:layout_marginEnd="-75dp"
                android:width="125dp"
                android:height="75dp"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/green"
                android:elevation="5dp"
                android:fontFamily="@font/outfit_extrabold"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/txtConfirmPasswordInput"
                app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswordInput" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>