<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/main_colour">

    <!-- Title Label -->
    <TextView
        android:id="@+id/txtBudgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_budget_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/outfit_extrabold"
        android:textSize="50sp"
        android:textStyle="bold"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_margin="120dp" />

    <!-- Budget Name Input -->
    <EditText
        android:id="@+id/edtBudgetName"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@drawable/format_button"
        android:fontFamily="@font/outfit_extrabold"
        android:hint="@string/transaction_amount_hint"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtBudgetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_margin="20dp" />


    <!-- Cancel Button -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/red"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtBudgetName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintWidth_percent="0.45" />

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtBudgetName"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>
