<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_colour"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtAddCategory"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:color="@color/white"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:padding="5dp"
        android:text="@string/category_create"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCategoryInput"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/format_text_input"
        android:backgroundTint="@color/primary"
        android:gravity="center"
        android:hint="@string/Category_Input_Hint"
        android:autoSizeTextType="uniform"
        android:color="@color/white"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/txtAddCategory"
        app:layout_constraintStart_toStartOf="@+id/txtAddCategory"
        app:layout_constraintTop_toBottomOf="@+id/txtAddCategory" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_gravity="start"
        android:layout_marginTop="25dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/red"
        android:color="@color/white"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:padding="10dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@+id/txtCategoryInput"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoryInput" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_gravity="end"
        android:layout_marginTop="25dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/green"
        android:color="@color/white"
        android:elevation="5dp"
        android:fontFamily="@font/outfit_extrabold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/txtCategoryInput"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoryInput" />

</androidx.constraintlayout.widget.ConstraintLayout>